fixed randomness in crop_idx

--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,14 @@ SynthSeg/check_model.py
 SynthSeg/check_training_supervised.py
 
 scripts/PV-SynthSeg_scripts/check_generative_model.py
+scripts/PV-SynthSeg_scripts/check_generative_model_lesion.py
 scripts/PV-SynthSeg_scripts/draw_boxplots.py
 scripts/PV-SynthSeg_scripts/intensity_estimation_script.py
 scripts/PV-SynthSeg_scripts/preprocess_hippo_script.py
 scripts/PV-SynthSeg_scripts/PV-SynthSeg_generation_script.py
 scripts/PV-SynthSeg_scripts/PV-SynthSeg_generation_script_Le.py
 scripts/PV-SynthSeg_scripts/PV-SynthSeg_validation.py
+scripts/PV-SynthSeg_scripts/PV-SynthSeg_validation_epimix.py
 
 scripts/SynthSeg_scripts/boxplots_presentation.py
 scripts/SynthSeg_scripts/check_generative_model.py
