--- a/.gitignore
+++ b/.gitignore
@@ -4,19 +4,11 @@ venv
 
 ext/neuron/models_*
 
+scripts/commands/training_*
 scripts/lesions_scripts
+scripts/PV_SynthSeg_scripts
 scripts/super-res/
-
-scripts/launch_scripts_from_terminal/training_*
-
-scripts/PV_SynthSeg_scripts/draw_boxplots.py
-scripts/PV_SynthSeg_scripts/PV_SynthSeg_process.py
-scripts/PV_SynthSeg_scripts/PV_SynthSeg_generation_script.py
-
-scripts/SynthSeg_scripts/check_generative_model.py
-scripts/SynthSeg_scripts/check_supervised_training.py
-scripts/SynthSeg_scripts/draw_boxplots.py
-scripts/SynthSeg_scripts/mosaic_figure.py
+scripts/SynthSeg_scripts
 
 SynthSeg/boxplots.py
 SynthSeg/check_*
