--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,8 @@ ext/neuron/models_*
 scripts/commands/training_*
 scripts/gradients
 scripts/heart
-scripts/lesions_scripts
-scripts/PV_SynthSeg_scripts
-scripts/super-res/
-scripts/SynthSeg_scripts
+scripts/PAMI
+scripts/previous_papers
 
 SynthSeg/boxplots.py
 SynthSeg/check_*
