--- a/requirements_python3.6.txt
+++ b/requirements_python3.6.txt
@@ -1,67 +1,48 @@
-absl-py==0.9.0
+absl-py==1.4.0
 astor==0.8.1
-backcall==0.1.0
-cachetools==4.1.0
-certifi==2020.4.5.1
-chardet==3.0.4
-cloudpickle==1.1.1
-cycler==0.10.0
-decorator==4.4.2
+cached-property==1.5.2
+cachetools==4.2.4
+certifi==2022.12.7
+charset-normalizer==2.0.12
+cycler==0.11.0
+dataclasses==0.8
 gast==0.2.2
-google-auth==1.14.0
-google-auth-oauthlib==0.4.1
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-grpcio==1.28.1
+grpcio==1.48.2
 h5py==2.10.0
-idna==2.9
-imageio==2.8.0
-ipython==7.13.0
-ipython-genutils==0.2.0
-jedi==0.17.0
-joblib==0.14.1
+idna==3.4
+importlib-metadata==4.8.3
 Keras==2.3.1
 Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-kiwisolver==1.2.0
-Markdown==3.2.1
-matplotlib==3.2.1
-nibabel==3.1.0
-numpy==1.18.2
-oauthlib==3.1.0
-opt-einsum==3.2.1
-packaging==20.3
-pandas==1.0.3
-parso==0.7.0
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==7.1.1
-prompt-toolkit==3.0.5
-protobuf==3.11.3
-ptyprocess==0.6.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+Markdown==3.3.7
+matplotlib==3.3.4
+nibabel==3.2.2
+numpy==1.19.5
+oauthlib==3.2.2
+opt-einsum==3.3.0
+packaging==21.3
+Pillow==8.4.0
+protobuf==3.19.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-Pygments==2.6.1
-pylab-sdk==1.1.2
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2019.3
-PyYAML==5.3.1
-requests==2.23.0
-requests-oauthlib==1.3.0
-rsa==4.0
-scikit-learn==0.22.2.post1
-scipy==1.4.1
-seaborn==0.10.0
-six==1.14.0
-sklearn==0.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+PyYAML==6.0
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.9
+scipy==1.5.4
+six==1.16.0
 tensorboard==2.0.2
 tensorflow-estimator==2.0.1
-tensorflow-gpu==2.0.1
-tensorflow-probability==0.8.0
+tensorflow-gpu==2.0.0
 termcolor==1.1.0
-tqdm==4.45.0
-traitlets==4.3.3
-urllib3==1.25.9
-wcwidth==0.1.9
-Werkzeug==1.0.1
-wrapt==1.12.1
+typing_extensions==4.1.1
+urllib3==1.26.15
+Werkzeug==2.0.3
+wrapt==1.15.0
+zipp==3.6.0
